personal-website.yml
kind: Service
apiVersion: v1
metadata:
  name: personal-website
spec:
  selector:
    app: personal-website
  type: ClusterIP
  ports:
    - port: 1000
      targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: personal-website
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
      - name: personal-website
        image: blenz1/personal-website
        ports:
        - containerPort: 80
